<resources>
    <string name="app_name">The Dog House</string>
    <string name="login_button_label">Login</string>
    <string name="create_account_button_label">Create Account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="appName">The Dog House</string>
    <string name="logout">Logout</string>
    <string name="createHome">Create Home</string>
    <string name="addHome">Add Home</string>
    <string name="adminButton">Admin Menu</string>
    <string name="back">Back</string>
    <string name="deleteUser">Delete User</string>
    <string name="adminPage">Admin Page</string>
    <string name="adminAllUsers">View All Users</string>
    <string name="adminAllHomes">View All Homes</string>
    <string name="badId">An invalid user id was given!</string>
    <string name="noUserById">No such user exists with given user ID!</string>
    <string name="newPet">New Pet</string>
    <string name="addPet">Add Pet</string>
    <string name="deleteHouse">Delete House</string>
    <string name="removePet">Remove Pet</string>
</resources>