<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity">

    <TextView
        android:id="@+id/user_appName_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:fontFamily="serif"
        android:text="@string/appName"
        android:textAllCaps="false"
        android:textSize="50sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_welcome_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:gravity="center"
        android:hint="Welcome"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_appName_textview"/>

    <Button
        android:id="@+id/user_createHome_button"
        android:layout_width="200sp"
        android:layout_height="75sp"
        android:layout_marginBottom="30sp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/createHome"
        android:textColor="@color/textColor"
        android:textColorHighlight="#F7F5F5"
        android:textColorLink="#F7F5F5"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/user_admin_menu_button"
        app:layout_constraintEnd_toStartOf="@id/user_addHome_button"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/user_addHome_button"
        android:layout_width="200sp"
        android:layout_height="75sp"
        android:layout_marginBottom="30sp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/addHome"
        android:textColor="@color/textColor"
        android:textColorHighlight="#F7F5F5"
        android:textColorLink="#F7F5F5"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/user_logout_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/user_createHome_button" />

    <Button
        android:id="@+id/user_admin_menu_button"
        android:layout_width="200sp"
        android:layout_height="75sp"
        android:layout_marginBottom="30sp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/adminButton"
        android:textColor="@color/textColor"
        android:textColorHighlight="#F7F5F5"
        android:textColorLink="#F7F5F5"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/user_logout_button" />

    <Button
        android:id="@+id/user_logout_button"
        android:layout_width="200sp"
        android:layout_height="75sp"
        android:layout_marginBottom="30sp"
        android:backgroundTint="@color/buttonColor"
        android:gravity="center"
        android:text="@string/logout"
        android:textColor="@color/textColor"
        android:textColorHighlight="#F7F5F5"
        android:textColorLink="#F7F5F5"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/user_admin_menu_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>