<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminHomesActivity">

    <TextView
        android:id="@+id/admin_homes_appName_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:fontFamily="serif"
        android:text="@string/appName"
        android:textAllCaps="false"
        android:textSize="50sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/admin_homes_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:fontFamily="serif"
        android:text="@string/adminPage"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/admin_homes_appName_textview"/>

    <Button
        android:id="@+id/admin_homes_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:backgroundTint="@color/buttonColor"
        android:gravity="center"
        android:text="@string/back"
        android:textColor="@color/textColor"
        android:textColorHighlight="#F7F5F5"
        android:textColorLink="#F7F5F5"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/admin_homes_scrollview"
        android:layout_width="409dp"
        android:layout_height="501dp"
        app:layout_constraintTop_toBottomOf="@id/admin_homes_title_textview"
        app:layout_constraintBottom_toTopOf="@id/admin_homes_back_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="139dp">

        <LinearLayout
            android:id="@+id/admin_homes_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>