<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/home_appName_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:fontFamily="serif"
        android:text="@string/appName"
        android:textAllCaps="false"
        android:textSize="50sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home_welcome_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:gravity="center"
        android:hint="Welcome ___!"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_appName_textview"/>

    <TextView
        android:id="@+id/home_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:fontFamily="serif"
        android:text="Home Name"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_welcome_textview" />

    <ScrollView
        android:id="@+id/home_pets_scrollview"
        android:layout_width="match_parent"
        android:layout_height="390sp"
        app:layout_constraintTop_toBottomOf="@id/home_name_textview"
        app:layout_constraintBottom_toTopOf="@id/home_delete_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="139dp">

        <LinearLayout
            android:id="@+id/home_pets_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/home_new_pet_button"
        android:layout_width="200sp"
        android:layout_height="75sp"
        android:layout_marginBottom="5sp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/newPet"
        android:textColor="@color/textColor"
        android:textColorHighlight="#F7F5F5"
        android:textColorLink="#F7F5F5"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/home_back_button" />

    <Button
        android:id="@+id/home_back_button"
        android:layout_width="200sp"
        android:layout_height="75sp"
        android:layout_marginBottom="5sp"
        android:backgroundTint="@color/buttonColor"
        android:gravity="center"
        android:text="@string/back"
        android:textColor="@color/textColor"
        android:textColorHighlight="#F7F5F5"
        android:textColorLink="#F7F5F5"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/home_new_pet_button"/>

    <Button
        android:id="@+id/home_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:backgroundTint="@color/buttonRedColor"
        android:gravity="center"
        android:text="@string/deleteHouse"
        android:textColor="@color/textColor"
        android:textColorHighlight="#F7F5F5"
        android:textColorLink="#F7F5F5"
        android:textSize="30sp"
        android:visibility="invisible"
        android:clickable="false"
        app:layout_constraintBottom_toTopOf="@id/home_new_pet_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>