<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPetActivity">

    <TextView
        android:id="@+id/new_pet_AppName_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:fontFamily="serif"
        android:text="@string/appName"
        android:textAllCaps="false"
        android:textSize="50sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/new_pet_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:fontFamily="serif"
        android:text="@string/newPet"
        android:textAllCaps="false"
        android:textSize="50sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_pet_AppName_textview" />

    <EditText
        android:id="@+id/new_pet_name_edittext"
        android:layout_width="250sp"
        android:layout_height="75sp"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:hint="Pet Name"
        android:inputType="text"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_pet_title_textview"/>

    <EditText
        android:id="@+id/new_pet_type_edittext"
        android:layout_width="250sp"
        android:layout_height="75sp"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:hint="Pet Type"
        android:inputType="text"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_pet_name_edittext"/>

    <EditText
        android:id="@+id/new_pet_color_edittext"
        android:layout_width="250sp"
        android:layout_height="75sp"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:hint="Color"
        android:inputType="text"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_pet_type_edittext"/>

    <EditText
        android:id="@+id/new_pet_birthdate_edittext"
        android:layout_width="250sp"
        android:layout_height="75sp"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:hint="Birthdate"
        android:inputType="date"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_pet_color_edittext"/>

    <Button
        android:id="@+id/new_pet_add_pet_button"
        android:layout_width="250sp"
        android:layout_height="75sp"
        android:layout_marginTop="16sp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/addPet"
        android:textColor="@color/textColor"
        android:textColorHighlight="#F7F5F5"
        android:textColorLink="#F7F5F5"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_pet_birthdate_edittext" />

</androidx.constraintlayout.widget.ConstraintLayout>